k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  selector:
    app: test
    component: api
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
