k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ing
  labels:
    app: test
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: ''
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              name: http
